--- a/LaTeX-Reports/A1/refs.bib
+++ b/LaTeX-Reports/A1/refs.bib
@@ -1,14 +1,14 @@
 @misc{raspberrypi_config,
 	title = {Configuration},
 	author = {Raspberry Pi Documentation},
-	url = {https://www.raspberrypi.com/documentation/computers/configuration.html},
+	howpublished = {\url{https://www.raspberrypi.com/documentation/computers/configuration.html}},
 	year = {2021},
 	note = {Accessed on 2024-01-22} 
 }
 
 @misc{pihole,
   title = {Pi-hole: A black hole for Internet advertisements},
-  url = {https://pi-hole.net/},
+  howpublished = {\url{https://pi-hole.net/}},
   note = {Accessed: 2024-01-22}
 }
 
@@ -16,14 +16,14 @@
 	title = {Weather-Station}, 
 	author = {EWU-IEEE-Spokane}, 
 	year = {2024}, 
-	url = {https://github.com/EWU-IEEE-Spokane/Weather-Station}, 
+	howpublished = {\url{https://github.com/EWU-IEEE-Spokane/Weather-Station}}, 
 	note = {Accessed: 2024-01-22} 
 }
 
 @misc{ti_ek_tm4c123gxl,
   title = {EK-TM4C123GXL Evaluation board},
   author = {Texas Instruments},
-  url = {https://www.ti.com/tool/EK-TM4C123GXL},
+  howpublished = {\url{https://www.ti.com/tool/EK-TM4C123GXL}},
   note = {Accessed: 2024-01-22}
 }
 
@@ -39,7 +39,7 @@
   title = {EWU-IEEE-Spokane/Sorter-Project},
   author = {Jaidon Lybbert and Cody Birkland and sirchicdbruk and msheldon1986edu},
   year = {2020},
-  url = {https://github.com/EWU-IEEE-Spokane/Sorter-Project},
+  howpublished = {\url{https://github.com/EWU-IEEE-Spokane/Sorter-Project}},
   note = {Accessed: 2024-01-22}
 }
 
@@ -62,7 +62,7 @@
 @misc{rust_installation,
   title = {Installation},
   author = {The Rust Project Developers},
-  url = {https://www.rust-lang.org/learn/get-started},
+  howpublished = {\url{https://www.rust-lang.org/learn/get-started}},
   note = {Accessed: 2024-01-23}
 }
 
@@ -70,9 +70,18 @@
 	title = {Zig Bootstrap}, 
 	author = {Andrew Kelley and Zig Contributors}, 
 	year = {2021}, 
-	url = {https://github.com/ziglang/zig-bootstrap}, 
+	howpublished = {\url{https://github.com/ziglang/zig-bootstrap}}, 
 	note = {Accessed: 2024-01-23} 
 }
+
+@misc{kickstart,
+  title = {Kickstart.nvim: A Neovim configuration template},
+  author = {Christian Chiarulli},
+  year = {2021},
+  howpublished = {\url{https://github.com/ChristianChiarulli/kickstart.nvim}},
+  note = {Accessed: 2024-01-25}
+}
+
 
 
 
